# sce-core

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TEST_RESULTS.txt  index.html  pyproject.toml  requirements.txt
.github/: labels.yml  pull_request_template.md
docs/: CONTROLLED_EVOLUTION.md  DECISION_BACKBONE.md  DOCS_PR_SPLIT_PLAN.md  OVERVIEW_RU.md  README.md  RELIABILITY_AWARE_PLANNING.md  RESEARCH_VISION.md  VISUAL_DEMO.md  constraint_driven_stability.md  constraint_sweep.md  cyrillic_babel_demo.md  epidemic_regime_csv.md  epidemic_regime_demo.md  epidemic_regime_validation.md  governance.md  live_api_quickstart.md  origin.md  origin_short.md  persistence_over_time.md  possibility_and_selection.md  postgres.md  public_demo_script.md  release_readiness.md  research_program.md  resource_stability_csv.md  resource_stability_sensitivity.md  resource_stability_validation.md  resource_stability_walkthrough.md  scientific_examples.md  scientific_positioning.md  scientist_pitch.md  selection_landscape.md  stability_basin.md  theory.md  vision.md
examples/: constraint_sweep_demo.py  cyrillic_babel_demo.py  epidemic_regime_walkthrough.py  resource_stability_sensitivity.py  resource_stability_walkthrough.py  run_epidemic_regime_csv.py  run_resource_stability_csv.py  selection_landscape_demo.py  supplier_reliability_demo.py  validate_epidemic_regime_csv.py  validate_resource_stability_csv.py  verify_live_api.py
migrations/: 001_init.sql
sce/: api.py  cli.py  ui.html
site/: index.html
tests/: test_abstractions.py  test_api.py  (+59 more)
(+92 files in other folders)
