[project]
name = "sce-core"
version = "0.1.0a0"
description = "State–Constraint–Evolution Core"
authors = [{ name = "SCE Authors" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi", "uvicorn"]
openai = ["openai"]
anthropic = ["anthropic"]

[project.scripts]
sce = "sce.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = [
  "sce",
  "sce.core",
  "sce.storage",
  "sce.scenarios",
  "sce.visualization"
]
